# vcd

./: .gitignore  CMakeLists.txt  Makefile.am  Makefile.in  README.md  configure.ac  vcd.pc.in
src/: CMakeLists.txt  Makefile.am  Makefile.in  vcd.c  vcd.h
test/: Makefile.am  Makefile.in  comment.c  date.c  dump.c  dumpvar.c  dumpvarint.c  openclose.c  var.c
